fix(DeckList): prevent commander name not fully visible

--- a/clash/components/GameBrowser/GameLobby/GameLobbyPlayer/DeckSelection/DeckSelectionModal/DecksList.module.css
+++ b/clash/components/GameBrowser/GameLobby/GameLobbyPlayer/DeckSelection/DeckSelectionModal/DecksList.module.css
@@ -117,7 +117,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    line-height: 1;
+    line-height: 1.4;
     max-width: calc(100% - 8px);
 }
 
